--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Tienda Virtual de SNG STORE</title>
-    <link rel="stylesheet" href= "index.css">
+    <link rel="stylesheet" href= "diseño/index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
     
     <nav>
         <div class="logo">
-            <a href="logo.PNG"><img src="logo.PNG" alt="Logo de la Tienda"></a>
+            <a href="logo.PNG"><img src="imagenes/logo.PNG" alt="Logo de la Tienda"></a>
         </div>
         <ul>
             <li><a href="#">Inicio</a></li>
@@ -34,7 +34,7 @@
     </nav>
 
     <!-- Sección de bienvenida -->
-    <section class="bienvenida">
+    <section class="bienvenida" style="background-image: url('portada.PNG');">
         <h1>¡Bienvenidos a SNG STORE Tienda de Ropa!</h1>
         <p>Ropa, tenis y accesorios de la mejor calidad en SNG STORE con los mejores precios!!!!</p>
     </section>
@@ -43,19 +43,19 @@
 
     <div class="products" id="productos">
         <div class="product">
-            <img src="camisa.PNG" alt="" class="imagenes">
+            <img src="imagenes/camisa.PNG" alt="" class="imagenes">
             <h3>Producto 1</h3>
             <p>Precio: $10</p>
             <button class="add-to-cart" data-name="Producto 1" data-price="10">Agregar al carrito</button>
         </div>
         <div class="product">
-            <img src="producto2.PNG" alt="" class="imagenes">
+            <img src="imagenes/producto2.PNG" alt="" class="imagenes">
             <h3>Producto 2</h3>
             <p>Precio: $15</p>
             <button class="add-to-cart" data-name="Producto 2" data-price="15">Agregar al carrito</button>
         </div>
         <div class="product">
-            <img src="producto3.PNG" alt="" class="imagenes">
+            <img src="imagenes/producto3.PNG" alt="" class="imagenes">
             <h3>Producto 3</h3>
             <p>Precio: $20</p>
             <button class="add-to-cart" data-name="Producto 3" data-price="20">Agregar al carrito</button>
@@ -64,19 +64,19 @@
 
     <div class="products" id="productos">
         <div class="product">
-            <img src="guayo.PNG" alt="" class="imagenes">
+            <img src="imagenes/guayo.PNG" alt="" class="imagenes">
             <h3>Producto 1</h3>
             <p>Precio: $10</p>
             <button class="add-to-cart" data-name="Producto 4" data-price="10">Agregar al carrito</button>
         </div>
         <div class="product">
-            <img src="sandalia.PNG" alt="" class="imagenes">
+            <img src="imagenes/sandalia.PNG" alt="" class="imagenes">
             <h3>Producto 2</h3>
             <p>Precio: $15</p>
             <button class="add-to-cart" data-name="Producto 5" data-price="15">Agregar al carrito</button>
         </div>
         <div class="product">
-            <img src="peto.PNG" alt="" class="imagenes">
+            <img src="imagenes/peto.PNG" alt="" class="imagenes">
             <h3>Producto 3</h3>
             <p>Precio: $20</p>
             <button class="add-to-cart" data-name="Producto 6" data-price="20">Agregar al carrito</button>
@@ -85,19 +85,19 @@
 
     <div class="products" id="productos">
         <div class="product">
-            <img src="teni1.PNG" alt="" class="imagenes">
+            <img src="imagenes/teni1.PNG" alt="" class="imagenes">
             <h3>Producto 1</h3>
             <p>Precio: $10</p>
             <button class="add-to-cart" data-name="Producto 7" data-price="10">Agregar al carrito</button>
         </div>
         <div class="product">
-            <img src="teni2.PNG" alt="" class="imagenes">
+            <img src="imagenes/teni2.PNG" alt="" class="imagenes">
             <h3>Producto 2</h3>
             <p>Precio: $15</p>
             <button class="add-to-cart" data-name="Producto 8" data-price="15">Agregar al carrito</button>
         </div>
         <div class="product">
-            <img src="teni3.PNG" alt="" class="imagenes">
+            <img src="imagenes/teni3.PNG" alt="" class="imagenes">
             <h3>Producto 3</h3>
             <p>Precio: $20</p>
             <button class="add-to-cart" data-name="Producto 9" data-price="20">Agregar al carrito</button>
@@ -140,19 +140,19 @@
             </div>
             <div class="footer-social">
                 <h3>Síguenos</h3>
-                <a href="https://www.facebook.com/VanegasLon?locale=es_LA" class="social-icon"><img src="face.PNG" alt="Facebook"></a>
-                <a href="https://www.instagram.com/sng_store11/" class="social-icon"><img src="insta.PNG" alt="Instagram"></a>
+                <a href="https://www.facebook.com/VanegasLon?locale=es_LA" class="social-icon"><img src="imagenes/face.PNG" alt="Facebook"></a>
+                <a href="https://www.instagram.com/sng_store11/" class="social-icon"><img src="imagenes/insta.PNG" alt="Instagram"></a>
                 
             </div>
             <div class="footer-otro">
                 <h3>Otras redes</h3>
-                <a href="https://www.instagram.com/sng_deportes/" class="social-icon"><img src="logo2.PNG" alt=""></a>
+                <a href="https://www.instagram.com/sng_deportes/" class="social-icon"><img src="imagenes/logo2.PNG" alt=""></a>
                 <a href=""></a>
                 <a href=""></a>
             </div>
 
             <div class="footer-logo">
-                <a href="footer_logo.PNG"><img src="footer_logo.PNG" alt="Logo de la Tienda"></a>
+                <a href="footer_logo.PNG"><img src="imagenes/footer_logo.PNG" alt="Logo de la Tienda"></a>
             </div>
         </div>
 
