--- a/mujeres.html
+++ b/mujeres.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNG STORE</title>
-    <link rel="stylesheet" href="mujeres.css">
+    <link rel="stylesheet" href="diseño/mujeres.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
     <nav>
         <div class="logo">
-            <a href="logo.PNG"><img src="logo.PNG" alt="Logo de la Tienda"></a>
+            <a href="logo.PNG"><img src="imagenes/logo.PNG" alt="Logo de la Tienda"></a>
         </div>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -122,19 +122,19 @@
             </div>
             <div class="footer-social">
                 <h3>Síguenos</h3>
-                <a href="https://www.facebook.com/VanegasLon?locale=es_LA" class="social-icon"><img src="face.PNG" alt="Facebook"></a>
-                <a href="https://www.instagram.com/sng_store11/" class="social-icon"><img src="insta.PNG" alt="Instagram"></a>
+                <a href="https://www.facebook.com/VanegasLon?locale=es_LA" class="social-icon"><img src="imagenes/face.PNG" alt="Facebook"></a>
+                <a href="https://www.instagram.com/sng_store11/" class="social-icon"><img src="imagenes/insta.PNG" alt="Instagram"></a>
                 
             </div>
             <div class="footer-otro">
                 <h3>Otras redes</h3>
-                <a href="https://www.instagram.com/sng_deportes/" class="social-icon"><img src="logo2.PNG" alt=""></a>
+                <a href="https://www.instagram.com/sng_deportes/" class="social-icon"><img src="imagenes/logo2.PNG" alt=""></a>
                 <a href=""></a>
                 <a href=""></a>
             </div>
         </div>
         <div class="footer-logo">
-            <a href="footer_logo.PNG"><img src="footer_logo.PNG" alt="Logo de la Tienda"></a>
+            <a href="footer_logo.PNG"><img src="imagenes/footer_logo.PNG" alt="Logo de la Tienda"></a>
         </div>
     </footer>
     <script src="prueba.js"></script>
