--- a/oferta.html
+++ b/oferta.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNG STORE</title>
-    <link rel="stylesheet" href="oferta.css">
+    <link rel="stylesheet" href="diseño/oferta.css">
 </head>
 <body>
     <nav>
         <div class="logo">
-            <a href="logo.PNG"><img src="logo.PNG" alt="Logo de la Tienda"></a>
+            <a href="logo.PNG"><img src="imagenes/logo.PNG" alt="Logo de la Tienda"></a>
         </div>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -44,13 +44,13 @@
             </div>
             <div class="footer-social">
                 <h3>Síguenos</h3>
-                <a href="https://www.facebook.com/VanegasLon?locale=es_LA" class="social-icon"><img src="face.PNG" alt="Facebook"></a>
-                <a href="https://www.instagram.com/sng_store11/" class="social-icon"><img src="insta.PNG" alt="Instagram"></a>
+                <a href="https://www.facebook.com/VanegasLon?locale=es_LA" class="social-icon"><img src="imagenes/face.PNG" alt="Facebook"></a>
+                <a href="https://www.instagram.com/sng_store11/" class="social-icon"><img src="imagenes/insta.PNG" alt="Instagram"></a>
                 
             </div>
             <div class="footer-otro">
                 <h3>Otras redes</h3>
-                <a href="https://www.instagram.com/sng_deportes/" class="social-icon"><img src="logo2.PNG" alt=""></a>
+                <a href="https://www.instagram.com/sng_deportes/" class="social-icon"><img src="imagenes/logo2.PNG" alt=""></a>
                 <a href=""></a>
                 <a href=""></a>
             </div>
