--- a/futbol.html
+++ b/futbol.html
@@ -88,6 +88,10 @@
     </div>
 
     
+    <div class="boton_carro" id="boton">
+        <button><img src="carrito.png" alt="Carrito"></button>
+    </div>
+    
 
     <h2>Carrito de Compras</h2>
     <div class="cart">
