--- a/oferta.html
+++ b/oferta.html
@@ -31,6 +31,10 @@
     </nav>
 
 
+    <div class="boton_carro" id="boton">
+        <button><img src="carrito.png" alt="Carrito"></button>
+    </div>
+    
 
 
     <footer>
