Mensaje de agregado al carrito

--- a/futbol.html
+++ b/futbol.html
@@ -93,23 +93,28 @@
     </div>
     
 
-    <h2>Carrito de Compras</h2>
-    <div class="cart">
-        <table id="cart-items">
-            <thead>
-                <tr>
-                    <th>Producto</th>
-                    <th>Cantidad</th>
-                    <th>Precio</th>
-                    <th>Total</th>
-                    <th>Eliminar</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-        <p id="cart-total">Total: $0</p>
-        <button id="checkout" class="checkout">Finalizar Compra</button>
+    <div id="todo1" class="todo1">
+        <div id="todo" class="todo">
+            <span class="cierre">&times;</span>
+            <h2>Carrito de Compras</h2>
+            <div class="cart">
+                <table id="cart-items">
+                    <thead>
+                        <tr>
+                            <th>Producto</th>
+                            <th>Cantidad</th>
+                            <th>Precio</th>
+                            <th>Total</th>
+                            <th>Eliminar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+                    <p id="cart-total">Total: $0</p>
+                <button id="checkout" class="checkout">Finalizar Compra</button>
+            </div>
+        </div>
     </div>
 
     <p id="confirmation-message"></p>
@@ -145,6 +150,7 @@
         </div>
     </footer>
     <script src="prueba.js"></script>
+    <script src="carrito.js"></script>
 </body>
 </html>
 </body>
