--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <img src="imagenes/teni3.PNG" alt="" class="imagenes">
             <h3>Producto 3</h3>
             <p>Precio: $20</p>
-            <button class="btn-producto" data-name="Producto 9" data-price="20">Agregar al carrito</button>
+            <button class="add-to-cart" id="boton-agragar" data-name="Producto 9" data-price="20">Agregar al carrito</button>
         </div>
     </div>
 
