--- a/oferta.html
+++ b/oferta.html
@@ -34,6 +34,31 @@
     <div class="boton_carro" id="boton">
         <button><img src="carrito.png" alt="Carrito"></button>
     </div>
+
+
+    <div id="todo1" class="todo1">
+        <div id="todo" class="todo">
+            <span class="cierre">&times;</span>
+            <h2>Carrito de Compras</h2>
+            <div class="cart">
+                <table id="cart-items">
+                    <thead>
+                        <tr>
+                            <th>Producto</th>
+                            <th>Cantidad</th>
+                            <th>Precio</th>
+                            <th>Total</th>
+                            <th>Eliminar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+                    <p id="cart-total">Total: $0</p>
+                <button id="checkout" class="checkout">Finalizar Compra</button>
+            </div>
+        </div>
+    </div>
     
 
 
@@ -60,6 +85,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="carrito.js"></script>
 
 </body>
 </html>
