Organizando los estilos en las carpetas

--- a/mujeres.html
+++ b/mujeres.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNG STORE</title>
-    <link rel="stylesheet" href="diseño/mujeres.css">
+    <link rel="stylesheet" href="static/diseño/mujeres.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
@@ -89,7 +89,7 @@
     
 
     <div class="boton_carro" id="boton">
-        <button><img src="carrito.png" alt="Carrito"></button>
+        <button><img src="imagenes/carrito.png" alt="Carrito"></button>
     </div>
     
 
@@ -147,8 +147,8 @@
             <a href="footer_logo.PNG"><img src="imagenes/footer_logo.PNG" alt="Logo de la Tienda"></a>
         </div>
     </footer>
-    <script src="prueba.js"></script>
-    <script src="carrito.js"></script>
+    <script src="static/prueba.js"></script>
+    <script src="static/carrito.js"></script>
 </body>
 </html>
 </body>
