--- a/oferta.html
+++ b/oferta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNG STORE</title>
-    <link rel="stylesheet" href="diseño/oferta.css">
+    <link rel="stylesheet" href="static/diseño/oferta.css">
 </head>
 <body>
     <nav>
@@ -32,7 +32,7 @@
 
 
     <div class="boton_carro" id="boton">
-        <button><img src="carrito.png" alt="Carrito"></button>
+        <button><img src="imagenes/carrito.png" alt="Carrito"></button>
     </div>
 
 
@@ -86,7 +86,7 @@
         </div>
     </footer>
 
-    <script src="carrito.js"></script>
+    <script src="static/carrito.js"></script>
 
 </body>
 </html>
