--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Tienda Virtual de SNG STORE</title>
-    <link rel="stylesheet" href= "diseño/index.css">
+    <link rel="stylesheet" href= "static/diseño/index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
@@ -34,7 +34,7 @@
     </nav>
 
     <!-- Sección de bienvenida -->
-    <section class="bienvenida" style="background-image: url('portada.PNG');">
+    <section class="bienvenida" style="background-image: url('imagenes/portada.PNG');">
         <h1>¡Bienvenidos a SNG STORE Tienda de Ropa!</h1>
         <p>Ropa, tenis y accesorios de la mejor calidad en SNG STORE con los mejores precios!!!!</p>
     </section>
@@ -108,7 +108,7 @@
 
 
     <div class="boton_carro" id="boton">
-        <button><img src="carrito.png" alt="Carrito"></button>
+        <button><img src="imagenes/carrito.png" alt="Carrito"></button>
     </div>
     
     <div id="todo1" class="todo1">
@@ -168,7 +168,7 @@
 
         
     </footer>
-    <script src="prueba.js"></script>
-    <script src="carrito.js"></script>
+    <script src="static/prueba.js"></script>
+    <script src="static/carrito.js"></script>
 </body>
 </html>
